[workspace]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[[bin]]
name = "marketplace"
path = "src/bin/marketplace.rs"

[package]
name = "marketplace"
version = "0.1.0"
description = "Anchor-based NFT marketplace program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace"

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = { version = "4.1.2", features = ["serde"] }

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
